--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     <link rel="apple-touch-icon" href="/icon.png">
 
     <%= vite_client_tag %>
-    <%= vite_stylesheet_tag "application" %>
+    <%= vite_react_refresh_tag %>
   </head>
 
   <body>
